# smfVLA

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  instructions.md  monitor_freeflow.sh  pyproject.toml  wait_for_100_steps.sh
dmf/: .gitignore  README.md
docs/: 2026-06-04-smf-curr-v2-design.md  2026-06-04-smf-curr-v2-impl-plan.md  20260602_154947_smf_base_training_plan.md  directory_structure.md  eval-debug.md  eval-results.md  evaluation.md  experiment_template.md  experiment_workflow.md  training-debug.md
freeflow/: CLAUDE.md  FREEFLOW_IMPLEMENTATION_PLAN.md  README.md  check_train.sh  data  pyproject.toml
freeflow/configs/train/: freeflow_base_libero.yaml  freeflow_base_libero_backup.yaml  freeflow_base_libero_plus.yaml  freeflow_full.yaml  freeflow_no_correction.yaml
freeflow/scripts/: diagnose_checkpoint.py  eval_direct.py  eval_freeflow.sh  eval_libero_plus.py  eval_libero_plus_quick_all.sh  test_and_train.sh  test_model_loading.py  train.sh
freeflow/src/freeflow/: __init__.py
freeflow/src/freeflow/config/: __init__.py  default_config.py
freeflow/src/freeflow/models/: __init__.py  pi05_freeflow.py  teacher_wrapper.py
freeflow/src/freeflow/training/: __init__.py  data_loader.py  freeflow_loss.py  freeze_utils.py  jax_trainer.py  run_train.py  teacher_integration.py
piflow/: README.md
scripts/: convert_calvin_to_jax.py  convert_pytorch_to_jax.py  eval.sh  eval_after_train_curr_12k.sh  eval_checkpoints.sh  eval_checkpoints_6k_15k.sh  eval_curr_v2_all_ckpt.sh  eval_direct.py  eval_libero_plus.py  eval_libero_plus.sh  eval_libero_plus_20task.sh  eval_libero_plus_5ep.sh  eval_libero_plus_comparison.sh  eval_pi05_libero_1nfe_orig.sh  eval_pi05_libero_4suites.sh  eval_step3000_all_suites.sh  eval_utils.py  merge_lora_checkpoint.py  run_train.py  serve_policy.sh  wait_for_dmf_then_train_piflow.sh
snapflow/: CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  workflow_implement.py
snapflow/configs/train/: snapflow_libero.yaml  snapflow_libero_plus.yaml
snapflow/data/: libero  libero-plus
snapflow/scripts/: run_train.py  train.sh
snapflow/src/snapflow/: __init__.py
snapflow/src/snapflow/eval/: __init__.py  eval_utils.py
snapflow/src/snapflow/models/: __init__.py  pi05_snapflow.py  target_time_mlp.py
snapflow/src/snapflow/training/: __init__.py  data_loader_mp.py  freeze_utils.py  jax_trainer.py  snapflow_loss.py
(+381 files in other folders)
